full stack apprenticeship

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,9 @@
     	</div>
 
       <div class="row marketing">
-      {% if object_list %}            
+      {% if content_list %}            
       <ul>
-      {% for article in object_list %}
+      {% for article in content_list %}
 <!--         <li> 
  -->   <div class="jumbotron">
 
