--- a/templates/content_page.html
+++ b/templates/content_page.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -7,12 +9,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+
+<nav class="navbar navbar-inverse navbar-static-top" style='background-color: #204157;'>
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -20,17 +25,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Curate</a>
+      <a class="navbar-brand" href="#" style="font-family:Open Sans;color: #F4F0E6;font-weight:bold;font-size:32px">Curate</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Home</a></li>
+        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">About</a></li>
+        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Projects</a></li>
+        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
@@ -41,19 +46,23 @@
     <div class="col-1-2 sidenav">
     </div>
     <div class="col-3-10"> 
-      <h1>Hello
+      <h1 style="font-family:Merriweather;font-weight:bold;color:#204157">Hello
         {% if request.user.is_authenticated %}{{request.user.username}}{% endif %}! Welcome to Curate.
       </h1>
     </div>
     <div class="col-3-10"> 
       {% if content_list %}            
-      <ul>
+
         {% for article in content_list %}
-          <div class="jumbotron">
-            <h4>{{ article.title }}</h4>
-            <p>{{article.description}}</p>
+          <div class="panel panel-default">
+            <div class="panel-heading" style="background-color:#F4F0E6">
+              <h4 style="font-family:Merriweather;font-weight:bold;color:#204157">{{ article.title }}</h4>
+            </div>
+            <div class="panel-body">
+              <p style="font-family:Open Sans">{{article.description}}</p>
           </div>
-      </ul>
+        </div>
+
         {% endfor %}
       {% else %}
         <p>There is no health information pushed to you yet!</p>
