--- a/templates/content_page.html
+++ b/templates/content_page.html
@@ -1,45 +1,6 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather" />
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
-
-</head>
-<body>
-
-
-<nav class="navbar navbar-inverse navbar-static-top" style='background-color: #204157;'>
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#" style="font-family:Open Sans;color: #F4F0E6;font-weight:bold;font-size:32px">Curate</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Home</a></li>
-        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">About</a></li>
-        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Projects</a></li>
-        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+{% block content %}
   
 <div class="container text-center">    
   <div class="row content">
@@ -74,9 +35,4 @@
   </div>
 </div>
 
-<footer class="container-fluid text-center">
-  <p>Copyright 2018</p>
-</footer>
-
-</body>
-</html>
+{% endblock %}
