--- a/templates/content_page.html
+++ b/templates/content_page.html
@@ -20,7 +20,7 @@
               <h4 style="font-family:Merriweather;font-weight:bold;color:#204157">{{ article.title }}</h4>
             </div>
             <div class="panel-body">
-              <p style="font-family:Open Sans">{{article.description}}</p>
+              <img src={{ article.image_url }}>
           </div>
         </div>
 
