--- a/templates/content_detail.html
+++ b/templates/content_detail.html
@@ -3,10 +3,32 @@
 
 {% block content %}
 
-<img href={{ object.image_url }}>
+<div class="container text-center">    
+  <div class="row content">
 
-<h1> {{ object.title }} </h1>
+          <div class="panel panel-default">
+            <div class="panel-heading" style="background-color:#F4F0E6">
+              <h4 style="font-family:Merriweather;font-weight:bold;color:#204157">{{ object.title }}</h4>
+            </div>
 
-<p> {{ object.description }}</p>
+            <div class="panel-body">
+              <img src={{ object.image_url }}>
+
+          </div>
+        </div>
+  </div>
+
+  <div class="row content">
+  	<div class="panel panel-default">
+
+		<div class = "panel-body"
+  			<p style="font-family:Merriweather;color:#204157">
+  				{{ object.description }}
+  			</p>
+  		</div>
+  	</div>
+  </div>
+</div>
+
 
 {% endblock %}
