--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
               <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+              <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
             </ul>
           </div>
         </div>
