--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,9 @@
-{% extends 'base.html' %}
+{% extends '../base.html' %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<div class="container text-left">    
 
   <h2>Login</h2>
   <form method="post">
@@ -10,5 +11,7 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+
+ </div>
 
 {% endblock %}
