--- a/templates/base.html
+++ b/templates/base.html
@@ -25,11 +25,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="#" style="font-family:Open Sans;color: #F4F0E6;font-weight:bold;font-size:32px">Curate</a>
+            <a class="navbar-brand" href="/home/" style="font-family:Open Sans;color: #F4F0E6;font-weight:bold;font-size:32px">Curate</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li><a href="/home/" style="font-family:Open Sans;color: #F4F0E6;">Home</a></li>
+              {% if request.user.is_authenticated %}
+              <li><a href="{% url 'content-form' %}" style="font-family:Open Sans;color: #F4F0E6;"> CMS</a></li>
+              {% endif %}
+
  <!--              <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">About</a></li> -->
  <!--              <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Projects</a></li>
               <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;">Contact</a></li> -->
@@ -38,10 +42,6 @@
 
               {% if request.user.is_authenticated %}
               <li><a href="{% url 'logout' %}" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-              {% endif %}
-
-              {% if request.user.is_authenticated %}
-              <li><a href="#" style="font-family:Open Sans;color: #F4F0E6;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
               {% endif %}
 
             </ul>
