fixed small quirk

--- a/templates/content_page.html
+++ b/templates/content_page.html
@@ -26,7 +26,7 @@
               </div>
               <div class="panel-body">
                 <a href="{% url 'detail' article.ID %}">
-                  <img style="height:150px" src={{ article.image_url }}>
+                  <img style="height:150px; width=100%;height=auto;" src={{ article.image_url }}>
                 </a>
              </div>
             </div>
